[gd_scene load_steps=5 format=3 uid="uid://cda4i2ncmge2x"]

[ext_resource type="Script" uid="uid://xi7rhi2d0kjs" path="res://levels/menus/settings/settings.gd" id="1_uu6rw"]
[ext_resource type="Texture2D" uid="uid://cdjjomguti4jv" path="res://assets/textures/back-icon.png" id="2_ifqal"]

[sub_resource type="LabelSettings" id="LabelSettings_uv2fn"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_c7vy1"]
font_size = 24

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uu6rw")

[node name="ReturnBTN" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
icon = ExtResource("2_ifqal")
flat = true
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="SettingsPageTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_uv2fn")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 532)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="AudioTitle" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
label_settings = SubResource("LabelSettings_c7vy1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicVolSlider" type="HSlider" parent="VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Effects"

[node name="SfxVolSlider" type="HSlider" parent="VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="ReturnBTN" to="." method="_on_return_btn_pressed"]
